--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -1,5 +1,5 @@
 .header{
-    background-color:#130f40;
+    background-color:#2980b9;
     color: #dfe6e9;
     padding:5px 10px;
     /* box-shadow: 0px 2px 6px grey; */
